--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -13,8 +13,10 @@
 <div class="iblockDiv">
 	<div class="identmapdiv">
 		{% if lang == 'ka' %}
+		<script src="{% static '/js/map.js' %}" async></script>
 		<span class="indentmaptext">{% t "map_of_identity" %}</span>
 		{% else %}
+        <script src="{% static '/js/mapen.js' %}" async></script>
 		<span class="indentmaptexten">{% t "map_of_identity" %}</span>
 		{% endif %}
 		<span class="identmapinfo">{% t "identity_map_text" %}</span>
@@ -35,7 +37,6 @@
 			<span class="sendusbuttontexten">{% t "text_us_button" %}</span></a>
 			{% endif %}
 	</div>
-
         <div id="map"></div>
         <script>
             const pins = {{ pins|safe }};
