--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -11,7 +11,7 @@
 		{% endif %}
 		<span class="allright">{% t 'allrightreserved' %}</span>
 		<span class="supporttext">{% t 'financialsupportertext' %}</span>
-	<div class="supportsinproject" style="margin-top: 0;">
+	<div class="supportsinproject" style="margin-top: 35px;">
 		<a href="https://www.usaid.gov/"><img src="{% static '/icons/usaid.png' %}" style="width: 22%; float: left;"></a>
 		<a href="https://zincnetwork.com/"><img src="{% static '/icons/zinc.png' %}" style="width: 27%; float: left; margin-left: 5%;"></a>
 		<a href="https://idfi.ge/ge"><img src="{% static '/icons/idfi.png' %}" style="width: 32.5%; float: left; margin-left: 5%;"></a>
