--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -4,14 +4,27 @@
 {% load transl_extras %}
 
 <head>
+		<link rel="stylesheet" href="{% static '/css/style.css' %}">
 		{% if lang == 'ka' %}
 		<script src="{% static '/js/map.js' %}" async></script>
 		{% else %}
         <script src="{% static '/js/mapen.js' %}" async></script>
 		{% endif %}
+        <script>
+            let pins = {{ pins|safe }};
+        </script>
+        <script
+    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback=initMap" async defer>
+</script>
 </head>
 <style>.navbar{background-color: #F1F1E6 !important;}
 #map{
+	height: 450px;
+	width: 100%;
+}
+#maps{
+	display: block;
+	margin-top: 15px;
 	height: 450px;
 	width: 100%;
 }
@@ -43,16 +56,11 @@
 			{% endif %}
 	</div>
         <div id="map"></div>
-        <script>
-            const pins = {{ pins|safe }};
-        </script>
         <div id="post" class="pinpost">
 
         </div>
-        <script
-    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback=initMap" async defer>
-</script>
-<center>
+
+<center>	
 <span class="under_map_text_first"><img src="{% static '/icons/Icongps.png' %}" style="display:inline-block; position: absolute;"> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% t 'undermaptextf' %}</span>
 <span class="under_map_text_second"><img src="{% static '/icons/Iconundermap.png' %}" style="display:inline-block; position: absolute;">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp{% t 'undermaptexts' %}</span>
 </center>
@@ -69,16 +77,13 @@
 		<span class="identmapinfomobile" style="text-align:left">{% t "identity_map_text" %}</span>
 	</div></center>
 
-        <div id="map"></div>
-        <script>
-            const pins = {{ pins|safe }};
-        </script>
-        <div id="post" class="pinpost">
+
+       <div id="maps"></div>
+        <div id="postmobile" class="pinpostmobile">
 
         </div>
-        <script
-    src="https://maps.googleapis.com/maps/api/js?v=3.50&key=AIzaSyBQAuKvUDilNX3uXRm29S-Mx7A7ylN5SYk&callback=initMap" async defer>
-</script>
+
+
 
 <center><br>
 <span class="under_map_text_first_mobile"> {% t 'undermaptextf' %}</span><br>
