--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,6 +1,6 @@
 .pinpost{
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4);
+  background-color: rgba(0,0,0, 0.9);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -8,6 +8,9 @@
 	right: 0;
 	top: 0;
 	z-index: 6;
+}
+.pinpostmobile{
+	display: none;
 }
 .pinpostdiv{
 	
@@ -21,43 +24,14 @@
 	overflow-y: scroll;
 	z-index: 9;
 }
-
-.pinpostheader{
-
-display: block;
-margin-left: 64px;
-margin-top: 36px;
-
-font-family: 'FiraGO';
-font-style: normal;
-font-weight: 600;
-font-size: 36px;
-line-height: 50px;
-
-/* or 139% */
-
-color: #2C2C2C;
-}
-
-.postback{
-	background-color: gray;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	z-index: 6;
-	top: 0;
-	left: 0;
-	display: none;
-}
-
-.pinedpostimg{
+@media only screen and (min-width: 1297px){
+	.pinedpostimg{
 	width: 600px;
 	display: block;
 	margin-top: 40px;
 	margin-left: 64px;
 
 }
-
 .pinedpostbody{
 display: block;
 margin-top: 30px;
@@ -75,6 +49,94 @@ margin-bottom: 20px;
 
 color: #3E3A2B;
 }
+.pinpostheader{
+
+display: block;
+margin-left: 64px;
+margin-top: 36px;
+
+font-family: 'FiraGO';
+font-style: normal;
+font-weight: 600;
+font-size: 36px;
+line-height: 50px;
+
+/* or 139% */
+
+color: #2C2C2C;
+}
+}
+
+@media only screen and (max-width: 1296px){
+.pinedpostimg{
+	width: 85%;
+	display: block;
+	margin-top: 40px;
+	margin-left: 25px;
+
+}
+.pinedpostbody{
+display: block;
+margin-top: 30px;
+margin-left: 25px;
+	font-family: 'FiraGO';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+text-align: justify;
+line-height: 24px;
+margin-right: 20px;
+margin-bottom: 20px;
+
+/* or 150% */
+
+color: #3E3A2B;
+}
+.pinpostdiv{
+	
+	background-color: white;
+	position: fixed;
+	width: 90%;
+	height: 90%;
+	display: none;
+	right: 5%;
+	top: 5%;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	z-index: 9;
+}
+.pinpostheader{
+
+display: block;
+margin-left: 25px;
+margin-top: 36px;
+
+font-family: 'FiraGO';
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 23px;
+
+/* or 139% */
+
+color: #2C2C2C;
+}
+}
+
+.postback{
+	background-color: gray;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 6;
+	top: 0;
+	left: 0;
+	display: none;
+}
+
+
+
+
 
 .pinpostclose{
 	display: block;
