--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -35,11 +35,11 @@
 		<span class="contuctusfooteren">{% t 'contact_us' %}</span>
 		{% endif %}
 		<div class="footercontactyldivs">
-			<img class="contacticons" src="{% static '/icons/Iconphone.png' %}">
+			<img class="contacticons" src="{% static '/icons/Iconphone.svg' %}">
 			<a class="contactinfo" href="tel:+995-322-2-92-15-14">+995 322 2 92 15 14</a>
 		</div>
 		<div class="footercontactyldivs" style="margin-left: 180px;">
-			<img class="contacticons" src="{% static '/icons/Iconemail.png' %}">
+			<img class="contacticons" src="{% static '/icons/Iconemail.svg' %}">
 			<a class="contactinfo" href = "mailto:gorimaps@idfi.ge">gorimaps@idfi.ge</a>
 		</div>
 	</div>
@@ -66,11 +66,11 @@
 		{% endif %}
 
 		<div class="footercontactyldivs">
-			<img class="footercontacticons" src="{% static '/icons/Iconphone.png' %}">
+			<img class="footercontacticons" src="{% static '/icons/Iconphone.svg' %}">
 			<a class="footercontactinfo" style="margin-left: 32px;" href="tel:+995-322-2-92-15-14">+995 322 2 92 15 14</a>
 		</div>
 		<div class="footercontactyldivs">
-				<img class="footercontacticons" src="{% static '/icons/Iconemail.png' %}">
+				<img class="footercontacticons" src="{% static '/icons/Iconemail.svg' %}">
 				<a class="footercontactinfo" style="margin-left: 
 				32px;"href = "mailto:gorimaps@idfi.ge">gorimaps@idfi.ge</a>
 		</div>
