--- a/gori/templates/culture_detail.html
+++ b/gori/templates/culture_detail.html
@@ -14,13 +14,13 @@
 <span class="post_title">{{history}}</span>
 
 <span onclick="copy()">
-<div class="post_social_divs"><img src="{% static '/icons/Iconlink.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/Iconlink.svg' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 </span>
 
 <a href="https://www.facebook.com/dialog/share?app_id=87741124305&href={{ request.build_absolute_uri }}
-"><div class="post_social_divs"><img src="{% static '/icons/Vectorfb.png' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div></a>
+"><div class="post_social_divs"><img src="{% static '/icons/Vectorfb.svg' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div></a>
 
-<div class="post_social_divs"><img src="{% static '/icons/vectortwshare.png' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+<div class="post_social_divs"><img src="{% static '/icons/vectortw.svg' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 
 <div class="post_line"></div>
 <div class="post_second_block">
@@ -64,11 +64,11 @@
 	<a class="post_go_back_mobile" href="{% url 'history' lang=lang %}">{% t 'back' %}</a>
 	<span class="post_title_mobile">{{history}}<br><br>
 	<div class="post_social_divs_mobile">
-		<img src="{% static '/icons/Iconlink.png' %}" style="width: 13.86px; height: 13.86px; margin-left: 11.07px; margin-top: 10px;"></div>
+		<img src="{% static '/icons/Iconlink.svg' %}" style="width: 13.86px; height: 13.86px; margin-left: 11.07px; margin-top: 10px;"></div>
 	<div class="post_social_divs_mobile" style="margin-left: 20px">
-		<img src="{% static '/icons/Vectorfb.png' %}" style="width: 15px; height: auto; margin-left: 10.5px; margin-top: 10.5px;"></div>
+		<img src="{% static '/icons/Vectorfb.svg' %}" style="width: 15px; height: auto; margin-left: 10.5px; margin-top: 10.5px;"></div>
 	<div class="post_social_divs_mobile" style="margin-left: 20px">
-		<img src="{% static '/icons/vectortwshare.png' %}" style="width: 15px; height: auto; margin-left: 10.5px; margin-top: 12.5px;"></div></span>
+		<img src="{% static '/icons/vectortw.svg' %}" style="width: 15px; height: auto; margin-left: 10.5px; margin-top: 12.5px;"></div></span>
 	</div>
 	{% if history.post_videos is not None %}
 	<iframe width="100%" height="315" src="{{history.post_videos}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-top:30px;"></iframe>
