--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -45,12 +45,12 @@
 	<span class="contact_us_contact_usen">{% t 'contact_us' %}</span>
 	{% endif %}
 	<div class="contact_us_contact_child_div">
-		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 12px" src="{% static '/icons/Iconphone.png' %}"></div>
+		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 12px" src="{% static '/icons/Iconphone.svg' %}"></div>
 		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
 		<a href="tel:+995-322-2-92-15-14"><span class="contact_us_contact_info">+995 322 2 92 15 14</span></a>
 	</div>
 	<div class="contact_us_contact_child_div">
-		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.png' %}" style="margin-top: 14px; margin-left: 14px"></div>
+		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.svg' %}" style="margin-top: 14px; margin-left: 14px"></div>
 		<span class="contact_us_contact_name">{% t 'email' %}</span><br>
 		<a href = "mailto:gorimaps@idfi.ge"><span class="contact_us_contact_info">info@idfi.ge</span></a>
 	</div>
@@ -102,12 +102,12 @@
 <div class="mobilecontactusline"></div>
 <div style="width:300px">
 	<div class="contact_us_contact_child_div" style="width:200px !important; float: left;">
-		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 1px" src="{% static '/icons/Iconphone.png' %}"></div>
+		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 1px" src="{% static '/icons/Iconphone.svg' %}"></div>
 		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
 		<a href="tel:+995-322-2-92-15-14"><span class="contact_us_contact_info">+995 322 2 92 15 14</span></a>
 	</div><br><br><br><br><br>
 		<div class="contact_us_contact_child_div" style="width:160px !important; float: left;">
-		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 14px; margin-left: 2px" src="{% static '/icons/Iconemail.png' %}"></div>
+		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 14px; margin-left: 2px" src="{% static '/icons/Iconemail.svg' %}"></div>
 		<span class="contact_us_contact_name"> &nbsp{% t 'email' %}</span><br>
 		<a href = "mailto:gorimaps@idfi.ge"><span class="contact_us_contact_info">info@idfi.ge</span></a>
 	</div>
