--- a/gori/templates/videos.html
+++ b/gori/templates/videos.html
@@ -18,7 +18,7 @@
 <div class="videodivpage">
 	<iframe width="100%" height="264px" src="{{video.video_src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 	<span class="videotimecounter">
-		<img src="{% static '/icons/Icontime.png' %}" class="undervideotime">{{video.minutes}}:{{video.seconds}}</span>
+		<img src="{% static '/icons/Icontime.svg' %}" class="undervideotime">{{video.minutes}}:{{video.seconds}}</span>
 	<span class="videopageundertext">{{video.video_title}}</span>
 </div></div>
 {% endfor %}
@@ -32,7 +32,7 @@
 <div class="videodivpagemobile">
 	<iframe width="100%" height="230px" src="{{video.video_src}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 	<span class="videotimecounter">
-		<img src="{% static '/icons/Icontime.png' %}" class="undervideotime">{{video.minutes}}:{{video.seconds}}</span>
+		<img src="{% static '/icons/Icontime.svg' %}" class="undervideotime">{{video.minutes}}:{{video.seconds}}</span>
 	<span class="videopageundertext">{{video.video_title}}</span>
 </div></div>
 {% endfor %}
