--- a/gori/templates/aboutproject.html
+++ b/gori/templates/aboutproject.html
@@ -3,6 +3,14 @@
 {% block content %}
 {% load transl_extras %}
 
+
+<head>
+	<meta property="og:title" content="{% t 'new_identity_of_gori' %} - {% t 'about_project' %}" />
+	<meta property="og:type" content="about.project" />
+	<meta property="og:url" content="{{ request.get_full_path }}" />
+	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+</head>
+
 <style>
 	.menuitem1{
 		text-decoration: underline !important;
