--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,6 +1,6 @@
 .pinpost{
   background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.9);
+  background-color: rgba(0,0,0, 0.4);
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -21,6 +21,7 @@
 	display: none;
 	right: 0;
 	top: 0;
+	overflow-x: hidden;
 	overflow-y: scroll;
 	z-index: 9;
 }
@@ -36,11 +37,12 @@
 display: block;
 margin-top: 30px;
 margin-left: 64px;
+width: 64%;
 	font-family: 'FiraGO';
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
-text-align: justify;
+text-align: left;
 line-height: 24px;
 margin-right: 20px;
 margin-bottom: 20px;
@@ -58,7 +60,8 @@ margin-top: 36px;
 font-family: 'FiraGO';
 font-style: normal;
 font-weight: 600;
-font-size: 36px;
+width: 58%;
+font-size: 27px;
 line-height: 50px;
 
 /* or 139% */
