--- a/gori/templates/architect_detail.html
+++ b/gori/templates/architect_detail.html
@@ -2,6 +2,15 @@
 {% load static %}
 {% block content %}
 {% load transl_extras %}
+
+<head>
+	<meta property="og:title" content="{{history}}" />
+	<meta property="og:type" content="architect.post" />
+	<meta property="og:url" content="{{ request.get_full_path }}" />
+	<meta property="og:image" content="{% static history.post_img %}" />
+	<meta property="og:description" content="{{history.post_text|truncatechars:150}}" />
+</head>
+
 <style>
 	.menuitem4{
 		text-decoration: underline !important;
