--- a/gori/templates/humans_detail.html
+++ b/gori/templates/humans_detail.html
@@ -3,6 +3,15 @@
 {% block content %}
 {% load transl_extras %}
 
+
+<head>
+	<meta property="og:title" content="{{human}}" />
+	<meta property="og:type" content="humans.post" />
+	<meta property="og:url" content="{{ request.get_full_path }}" />
+	<meta property="og:image" content="{% static human.post_img %}" />
+	<meta property="og:description" content="{{human.post_text|truncatechars:150}}" />
+</head>
+
 <style>
 	.menuitem5{
 		text-decoration: underline !important;
