--- a/gori/templates/architect.html
+++ b/gori/templates/architect.html
@@ -2,7 +2,12 @@
 {% load static %}
 {% block content %}
 {% load transl_extras %}
-
+<head>
+	<meta property="og:title" content="{% t 'new_identity_of_gori' %} - {% t 'architect' %}" />
+	<meta property="og:type" content="architect" />
+	<meta property="og:url" content="{{ request.get_full_path }}" />
+	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+</head>
 <style>
 	.menuitem4{
 		text-decoration: underline !important;
