--- a/gori/templates/culture.html
+++ b/gori/templates/culture.html
@@ -3,6 +3,13 @@
 {% block content %}
 {% load transl_extras %}
 
+<head>
+	<meta property="og:title" content="{% t 'new_identity_of_gori' %} - {% t 'culture' %}" />
+	<meta property="og:type" content="culture" />
+	<meta property="og:url" content="{{ request.get_full_path }}" />
+	<meta property="og:image" content="{% static '/aboutproject/gorimaps.jpeg' %}" />
+</head>
+
 <style>
 	.menuitem3{
 		text-decoration: underline !important;
