--- a/gori/templates/architect_detail.html
+++ b/gori/templates/architect_detail.html
@@ -44,6 +44,7 @@
 </div>
 <span class="post_text">{{history.post_text}}</span>
 
+	<center>
 	<div class="post_tell_us_more">
 		{% if lang == 'ka' %}
 		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span>
@@ -64,6 +65,7 @@
 			</div>
 		</a>{% endif %}
 	</div>
+	</center>
 </div>
 
 </div>
