--- a/gori/templates/humans.html
+++ b/gori/templates/humans.html
@@ -30,7 +30,8 @@
 	<div class="humans_post_desktop_iblock">
 		<span class="humans_post_desktop_header">{{human.post_title}}
 		</span>
-		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}<i style="text-decoration:underline; color:#3E3A2B;">(სრულად ნახვა)</i></span>
+		<span class="humans_post_desktop_info">{{human.post_text|truncatechars:300}}<br><i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}
+		<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 9px; position: absolute;"></i></span>
 	</div>
 	<img src="{% static human.post_img %}" class="humans_post_img_desktop">
 </div>
