--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -870,7 +870,7 @@ height: 126px;
   float: right;
   margin-top: 46px;
   margin-right: 20px;
-  background: #FEFEF8;
+  background: #F1F1E6;
   border-radius: 10px;
   }
 
