--- a/gori/templates/humans_detail.html
+++ b/gori/templates/humans_detail.html
@@ -26,13 +26,17 @@
 <div class="post_social_divs"><img src="{% static '/icons/Iconlink.svg' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
 <div class="post_social_divs"><img src="{% static '/icons/Vectorfb.svg' %}" style="width: 22px; height: 22px; margin-left: 13.5px; margin-top: 13px; float: left;"></div>
 <div class="post_social_divs"><img src="{% static '/icons/vectortw.svg' %}" style="width: 20px; height: 20px; margin-left: 14px; margin-top: 14px; float: left;"></div>
+
+<div class="post_second_block_human" style="margin-bottom: 35px;">
+	<img src="{% static human.post_img %}" class="post_img" style="width: 70%; height: 350px; margin-left:20%; object-fit: cover;">
+	<i style="width:70%; display:block; margin-left:20%; margin-top:10px; line-height: 25px;">{{human.post_text|truncatechars:100}}</i>
+
+</div>	
+
 <div class="post_line"></div>
-<div class="post_second_block" style="margin-bottom: 35px;">
-	<img src="{% static human.post_img %}" class="post_img" style="width: 60%; height: 500px; margin-left:20%; object-fit: cover;">
+<span class="post_text_human">{{human.post_text}}</span>
 
-</div>
-<span class="post_text">{{human.post_text}}</span>
-
+	<center>
 	<div class="post_tell_us_more">
 		{% if lang == 'ka' %}
 		<span class="post_tell_use_more_header">{% t "tell_us_more" %}</span>
@@ -53,6 +57,7 @@
 			</div>
 		</a>{% endif %}
 	</div>
+	</center>
 </div>
 
 </div>
