--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -27,6 +27,11 @@
 </script>
 </head>
 <style>.navbar{background-color: #F1F1E6 !important;}
+
+.map{
+	background-color: #FEFEF8;
+}
+
 #map{
 	height: 450px;
 	width: 100%;
