--- a/static/css/Iblock.css
+++ b/static/css/Iblock.css
@@ -26,6 +26,12 @@ line-height: 21px;
 
 color: #848177;
 }
+
+.pinpostlocation{
+	display: block;
+}
+
+
 @media only screen and (max-width: 1331px) {
 	.iblockDivMobile{display: block; background-color: white;}
 	.iblockDiv{
