--- a/static/css/history.css
+++ b/static/css/history.css
@@ -1,8 +1,9 @@
 
 .hitorypostsimgs{
-	width: 547px;
-height: 400px;
-margin-left: 59px;
+	width: 33%;
+height: 300px;
+margin-left: 70px;
+border-radius: 15px;
 object-fit: cover;
 display: inline-block;
 background: url(image.png);
@@ -20,10 +21,10 @@ display: block;
 font-family: 'FiraGO';
 font-style: normal;
 font-weight: 400;
-font-size: 20px;
+font-size: 16px;
 text-align: justify;
 margin-top: 36px;
-line-height: 32px;
+line-height: 28px;
 
 /* or 160% */
 
@@ -37,8 +38,8 @@ font-family: 'FiraGO';
 text-align: ;
 font-style: normal;
 font-weight: 600;
-font-size: 36px;
-line-height: 52px;
+font-size: 25px;
+line-height: 37px;
 
 /* or 144% */
 
@@ -46,7 +47,7 @@ color: #F6C042;
 }
 
 .historypostdivs{
-	margin-top: 80px;
+	margin-top: 0px;
 	width: 100%;
 height: 400px;
 display: block;
@@ -55,6 +56,7 @@ margin-left: 14%;
 
 .historypageheader{
 	width: 350px;
+	margin-bottom: 80px;
 height: 41px;
 display: block;
 margin-top: 64px;
@@ -69,6 +71,7 @@ line-height: 41px;
 color: #3E3A2B;
 }
 .historypageheaderen{
+	margin-bottom: 80px;
 	width: 350px;
 height: 41px;
 display: block;
