--- a/static/css/map.css
+++ b/static/css/map.css
@@ -9,6 +9,19 @@
 	top: 0;
 	z-index: 6;
 }
+
+.pinpostclose{
+	display: block;
+	margin-top: 36px;
+	cursor: pointer;
+	margin-left: 65px;
+	color: #848177;
+	font-family: 'FiraGO';
+	font-style: normal;
+	font-weight: 400;
+	font-size: 16px;
+}
+
 .pinpostmobile{
 	display: none;
 }
@@ -27,7 +40,7 @@
 }
 @media only screen and (min-width: 1297px){
 	.pinedpostimg{
-	width: 600px;
+	width: 60%;
 	display: block;
 	margin-top: 40px;
 	margin-left: 64px;
@@ -62,15 +75,46 @@ font-style: normal;
 font-weight: 600;
 width: 58%;
 font-size: 27px;
-line-height: 50px;
+line-height: 45px;
 
 /* or 139% */
 
 color: #2C2C2C;
 }
+.pinpostlocation{
+	display: block;
+	margin-left: 64px;
+	margin-top: 10px;
+	color: #3E3A2B;
+}
 }
 
 @media only screen and (max-width: 1296px){
+
+.pinpostlocation{
+	display: block;
+	margin-left: 25px;
+	margin-top: 10px;
+	color: #3E3A2B;
+}
+
+	.pinpostclose{
+		margin-top: 20px;
+		margin-left: 45%;
+	}
+
+.pinpostmobile{
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4);
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	display: none;
+	right: 0;
+	top: 0;
+	z-index: 6;
+}
+
 .pinedpostimg{
 	width: 85%;
 	display: block;
@@ -99,11 +143,13 @@ color: #3E3A2B;
 	
 	background-color: white;
 	position: fixed;
-	width: 90%;
+	width: 100%;
 	height: 90%;
+	top: 10%;
+left: 0px;
+background: #FEFEF8;
+border-radius: 16px 16px 0px 0px;
 	display: none;
-	right: 5%;
-	top: 5%;
 	overflow-y: scroll;
 	overflow-x: hidden;
 	z-index: 9;
@@ -113,6 +159,7 @@ color: #3E3A2B;
 display: block;
 margin-left: 25px;
 margin-top: 36px;
+width: 70%;
 
 font-family: 'FiraGO';
 font-style: normal;
@@ -140,15 +187,3 @@ color: #2C2C2C;
 
 
 
-
-.pinpostclose{
-	display: block;
-	margin-top: 36px;
-	cursor: pointer;
-	margin-left: 65px;
-	color: #848177;
-	font-family: 'FiraGO';
-	font-style: normal;
-	font-weight: 400;
-	font-size: 16px;
-}
