contact us divs bug fix

--- a/gori/templates/textus.html
+++ b/gori/templates/textus.html
@@ -50,14 +50,14 @@
 	<span class="contact_us_contact_us">{% t 'contact_us' %}</span>
 	{% else %}
 	<span class="contact_us_contact_usen">{% t 'contact_us' %}</span>
-	{% endif %}
+	{% endif %}<br><br>
 	<div class="contact_us_contact_child_div">
-		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 12px; margin-left: 12px" src="{% static '/icons/Iconphone.svg' %}"></div>
+		<div class="contact_us_contact_child_icon_div"><img style="margin-top: 13px; margin-left: 14px" src="{% static '/icons/Iconphone.svg' %}"></div>
 		<span class="contact_us_contact_name">{% t 'telephone' %}</span><br>
 		<a href="tel:+995-322-2-92-15-14"><span class="contact_us_contact_info">+995 322 2 92 15 14</span></a>
 	</div>
 	<div class="contact_us_contact_child_div">
-		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.svg' %}" style="margin-top: 14px; margin-left: 14px"></div>
+		<div class="contact_us_contact_child_icon_div"><img src="{% static '/icons/Iconemail.svg' %}" style="margin-top: 15px; margin-left: 14px"></div>
 		<span class="contact_us_contact_name">{% t 'email' %}</span><br>
 		<a href = "mailto:gorimaps@idfi.ge"><span class="contact_us_contact_info">info@idfi.ge</span></a>
 	</div>
