--- a/gori/templates/index.html
+++ b/gori/templates/index.html
@@ -114,7 +114,6 @@
 		{% endif %}
 		<span class="aboutprojecttext">{{about_project.project_info|truncatechars:1000}}
 
-		<a href="{% url 'about_project' lang=lang %}"><i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}</i></a>
 
 		</span><br>
 		<a class="projectinfodetail" href="{% url 'about_project' lang=lang %}">{% t "detail" %} </a>&nbsp
@@ -143,7 +142,8 @@
 			<span class="historychildtext" style="text-align: left;">{{last_post_history.post_title|truncatechars:70}}
 			<br>
 			<span class="historychildtextinfo">{{last_post_history.post_text|truncatechars:60 }}<br>
-			<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}</i>
+			<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}
+				<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 6px; position: absolute;"></i>
 
 			</span></span>
 		</div></a>
@@ -154,7 +154,7 @@
 				{{lastsec_post_history.post_title|truncatechars:70}}
 				<br>
 				<span class="historychildtextinfo">{{lastsec_post_history.post_text|truncatechars:60}}<br>
-				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}</i>
+				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 6px; position: absolute;"></i>
 				</span>
 				<a class="allstatic" href="{% url 'history' lang=lang %}">
 					<div class="allstaticdesktopdiv">
@@ -186,7 +186,7 @@
 			<span class="culutrechildtext" style="text-align: left;">{{last_post_culture.post_title|truncatechars:70}}
 			<br>
 			<span class="historychildtextinfo">{{last_post_culture.post_text|truncatechars:60}}<br>
-				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}</i>
+				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 6px; position: absolute;"></i>
 			</span></span>
 		</div>
 		<a href="{% url 'culture-detail' lang=lang id=lastsec_post_culture.id %}"><div class="historychild">
@@ -196,7 +196,7 @@
 			<br>
 			<span class="historychildtextinfo">
 				{{lastsec_post_culture.post_text|truncatechars:60}}<br>
-				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}</i><br>
+				<i style="text-decoration:underline; color:#3E3A2B;">{% t "see_all" %}<img src="{% static '/icons/Iconrightarrow.svg' %}" style="margin-left: 5px; margin-top: 6px; position: absolute;"></i><br>
 				<a class="allstatic" href="{% url 'culture' lang=lang %}" style="margin-top:50px !important">
 					<div class="allstaticdesktopdiv">
 						{% if lang == 'ka' %}
