--- a/static/css/map.css
+++ b/static/css/map.css
@@ -55,7 +55,7 @@ width: 64%;
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
-text-align: left;
+text-align: justify;
 line-height: 24px;
 margin-right: 20px;
 margin-bottom: 20px;
